--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -3,7 +3,7 @@ name: CI Pipeline for CityFeedback Project with Spring Boot and Angular
 on:
   # Trigger the workflow on pushes to specific branches
   push:
-    branches: [ "dev", "main"" ]
+    branches: [ "dev", "main" ]
   # Trigger the workflow on pull requests targeting the main branch
   pull_request:
     branches: [ "dev","main" ]
